--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Django==4.1.5
-djangorestframework==3.14.0
-google_api_python_client==2.74.0
-google_auth_oauthlib==0.8.0
-protobuf==4.21.12
+Django
+djangorestframework
+google_api_python_client
+google_auth_oauthlib
+protobuf
+gunicorn
